@@ -12,41 +12,14 @@ int main() {
   cout << "UndefFlavorAction: " << cfg.metadata("UndefFlavorAction") << endl;
   cout << "Verbosity: " << cfg.metadata("Verbosity") << endl;
 
+  const LHAPDF::PDFSet set("CT10nlo");
+  cout << "SetDesc: " << set.metadata("SetDesc") << endl;
+  cout << "Verbosity from set: " << set.metadata("Verbosity") << endl;
+
   const LHAPDF::PDFInfo info("CT10nlo", 2);
-
-  if (info.has_key_local("PdfDesc")) {
-    cout << 1.1 << endl;
-  } else {
-    cout << 1.2 << endl;
-  }
-
-
-  cout << 1.7 << endl;
-  LHAPDF::getConfig();
-  cout << 1.8 << endl;
-  LHAPDF::getPDFSet("CT10nlo");
-  cout << 1.9 << endl;
-
-
-  cout << boolalpha << LHAPDF::getConfig().has_key("PdfDesc") << endl;
-  cout << boolalpha << LHAPDF::getPDFSet("CT10nlo").has_key_local("PdfDesc") << endl;
-
-  if (info.has_key_local("PdfType")) {
-    cout << 2.1 << endl;
-  } else {
-    cout << 2.2 << endl;
-  }
-
-  if (info.has_key("PdfDesc")) {
-    cout << 3.1 << endl;
-    cout << "PdfDesc: " << info.metadata("PdfDesc") << endl;
-  } else {
-    cout << 3.2 << endl;
-  }
-
+  if (info.has_key("PdfDesc")) cout << "PdfDesc: " << info.metadata("PdfDesc") << endl;
   cout << "PdfType: " << info.metadata("PdfType") << endl;
-  cout << "Verbosity: " << info.metadata("Verbosity") << endl;
-  info.metadata_as<std::string>("PdfType");
+  cout << "Verbosity from PDF: " << info.metadata("Verbosity") << endl;
 
   vector<int> pids = info.metadata_as< vector<int> >("Flavors");
   cout << "PIDs (1): "; foreach (int f, pids) { cout << f << " "; } cout << endl;
